--- a/css/styles.css
+++ b/css/styles.css
@@ -543,12 +543,21 @@ img {
   #projects {
     display: flex;
     flex-direction: column;
-    padding: 0rem 8.8125rem 8.8125rem;
+    padding: 0 8.8125rem 8.8125rem;
   }
 
   #flex-projects h2 {
     font-size: 2.5rem;
     padding: 0 0 1rem;
+  }
+
+  #about-me-div p,
+  #about-me h1 {
+    width: 35.375rem;
+  }
+
+  #about-me-div p {
+    font-size: 1.25rem;
   }
 
   #flex-projects div p {
@@ -576,6 +585,10 @@ img {
     height: 28rem;
   }
 
+  #about-me button {
+    margin: 2rem 0 8rem 0;
+  }
+
   #flex-projects div button {
     padding: 1rem;
     font-size: 1rem;
@@ -590,25 +603,12 @@ img {
   #about-me-div {
     background-image: url(../images/desktop-about-me.png);
     background-position: right;
-    padding: 1rem 0rem 0 8.875rem;
-  }
-
-  #about-me-div p,
-  #about-me h1 {
-    width: 35.375rem;
-  }
-
-  #about-me-div p {
-    font-size: 1.25rem;
-  }
-
-  #about-me button {
-    margin: 2rem 0 8rem 0;
+    padding: 1rem 0 0 8.875rem;
   }
 
   #about-me-div hr {
     width: 85%;
-}
+  }
 
   /* Languages */
   #about-me-lang {
@@ -670,10 +670,6 @@ img {
 
   #name {
     display: none;
-  }
-
-  #contact-social-form {
-    width: 25%;
   }
 
   .flex-button {
