--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,34 @@
   src: url("../fonts/InaiMathi.ttf");
 }
 
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes spacing {
+  0% {
+    letter-spacing: -15px;
+  }
+
+  20% {
+    letter-spacing: 10px;
+  }
+
+  100% {
+    letter-spacing: 2px;
+  }
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -70,6 +98,19 @@ a:visited {
   padding: 0.625rem;
 }
 
+#about-me-lang div ul li {
+  font-weight: 400;
+  font-size: 1.375rem;
+  padding: 1rem 0;
+  font-family: "Inter", sans-serif;
+}
+
+.works-lang li {
+  border: 1px solid #e5e5e500;
+  padding: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.239);
+}
+
 #menu li {
   display: inline;
 }
@@ -79,25 +120,13 @@ a:visited {
   filter: blur(2px);
 }
 
-#menu li:hover{
+#menu li:hover {
   opacity: 1;
-  filter:blur(0);
-}
-
-#about-me-lang div ul li {
-  font-weight: 400;
-  font-size: 1.375rem;
-  padding: 1rem 0;
-  font-family: "Inter", sans-serif;
+  filter: blur(0);
 }
 
 #headline-social-media {
   padding: 1rem 0 0;
-}
-
-.works-lang li {
-  border: 1px solid #8993a4;
-  padding: 0.5rem;
 }
 
 #headline-social-media li:hover,
@@ -106,9 +135,16 @@ a:visited {
   padding: 1rem;
 }
 
+img {
+  height: 1rem;
+  width: 1rem;
+}
+
 #flex-projects div img {
   width: 42.75rem;
   height: 28rem;
+  width: 100%;
+  height: auto;
 }
 
 #about-me-lang div div img {
@@ -141,11 +177,6 @@ a:visited {
 }
 
 /* Headline */
-.works-list li {
-  background-color: rgba(255, 255, 255, 0.24);
-  border: #e5e5e500;
-}
-
 #headline {
   display: flex;
   flex-direction: column;
@@ -174,34 +205,6 @@ a:visited {
   font-weight: 400;
   font-size: 3.5rem;
   text-align: left;
-}
-
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes spacing {
-  0% {
-    letter-spacing: -15px;
-  }
-
-  20% {
-    letter-spacing: 10px;
-  }
-
-  100% {
-    letter-spacing: 2px;
-  }
 }
 
 #headline h1:hover,
@@ -261,11 +264,6 @@ a:visited {
 #flex-projects {
   display: flex;
   flex-direction: column;
-}
-
-#flex-projects div img {
-  width: 100%;
-  height: auto;
 }
 
 #flex-projects h2 {
@@ -401,11 +399,6 @@ a:visited {
 
 #about-me-lang div {
   justify-content: center;
-}
-
-img {
-  height: 1rem;
-  width: 1rem;
 }
 
 #about-me-lang div div {
