--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ a:visited {
 }
 
 .works-lang li {
-  border: 1px solid #e5e5e500;
+  border: 1px solid;
   padding: 0.5rem;
   background-color: rgba(255, 255, 255, 0.239);
 }
@@ -146,12 +146,6 @@ a:visited {
 #headline-social-media li:hover,
 #contact-social-form li:hover {
   transform: scale(1.5);
-  padding: 1rem;
-}
-
-img {
-  height: 1rem;
-  width: 1rem;
 }
 
 #flex-projects div img {
@@ -163,6 +157,18 @@ img {
   order: 1;
 }
 
+#project-1 {
+  margin-top: 1rem;
+}
+
+#project-1,
+.project-2,
+.project-3,
+#project-4 {
+  background-image: url("../images/projects/project-4.png");
+  padding: 1rem;
+}
+
 #project-1:hover,
 .project-2:hover,
 .project-3:hover,
@@ -170,6 +176,14 @@ img {
 #about-me-lang div ul li:hover,
 #about-me-lang div div img:hover {
   transform: scale(1.15);
+}
+
+#project-1-button {
+  display: block;
+}
+
+#project-1-button-hidden {
+  display: none;
 }
 
 #nav-first-a {
@@ -182,6 +196,11 @@ img {
 
 .hidden-nav {
   display: none;
+}
+
+.hidden-img {
+  height: 1rem;
+  width: 1rem;
 }
 
 .unhidden-img {
@@ -197,7 +216,7 @@ img {
   padding: 0 1.5rem;
   margin: 0;
   height: 42rem;
-  background-image: url("../images/Background.png");
+  background-image: url("../images/header/header.png");
   background-repeat: no-repeat;
   background-position: right bottom;
   background-color: #1c1a19;
@@ -325,18 +344,22 @@ img {
   font-size: 1rem;
   font-family: "Inter", sans-serif;
   letter-spacing: 0.05em;
+  width: 100%;
+  margin: 0 0 2rem;
 }
 
-.flex-button,
-#project-1-button {
-  width: inherit;
-  margin-left: -1rem;
+.project-button {
+  width:auto;
 }
 
 #project-1-button:hover,
 .project-button:hover {
   background-color: #fff;
   color: #ff6b00;
+}
+
+#project-1-button-hidden {
+  display: none;
 }
 
 .project-heading {
@@ -391,7 +414,7 @@ img {
 
 #about-me-div {
   background-color: #1c1a19;
-  background-image: url("../images/about me.png");
+  background-image: url("../images/about-me/about me.png");
   background-repeat: no-repeat;
   background-position: 100% 90%;
   padding: 1.5rem;
@@ -512,16 +535,17 @@ img {
   margin-bottom: 1rem;
 }
 
-#social-media-footer hr {
-  width: 30%;
-  margin: 0 auto;
-  border: 2px solid;
+#social-media-footer-img {
+  margin: auto;
+  display: flex;
 }
 
 @media (min-width: 768px) {
   /* Head */
   .hidden-nav {
     display: inline;
+    height: 1rem;
+    width: 1rem;
   }
 
   .nav {
@@ -548,7 +572,7 @@ img {
   #headline {
     flex-direction: inherit;
     align-items: center;
-    background-image: url("../images/desktop-header.png");
+    background-image: url("../images/header/desktop-header.png");
     background-repeat: no-repeat;
     background-position: right;
   }
@@ -573,7 +597,7 @@ img {
 
   #headline-social-media {
     order: 1;
-    width: 10%;
+    width: 5%;
     display: block;
     padding: 0;
   }
@@ -591,12 +615,16 @@ img {
   .social-media {
     list-style-type: none;
     background: none;
-    gap: 1em;
+    gap: 0;
     padding: 0;
   }
 
   .social-media li a {
     height: 2vh;
+  }
+
+  .works-lang {
+    gap: 1rem;
   }
 
   #headline img {
@@ -639,10 +667,6 @@ img {
     display: flex;
     flex-direction: column;
     padding: 0 8.8125rem 0;
-  }
-
-  #project-1-button {
-    margin: 0 -1rem;
   }
 
   #flex-projects h2 {
@@ -693,21 +717,40 @@ img {
   }
 
   #project-1 {
-    background-image: url("../images/project-1.svg");
+    background-image: url("../images/projects/project-1.png");
+    padding: 8rem 0 0;
     display: flex;
-    align-items: flex-end;
+    justify-content: flex-end;
+    flex-direction: column;
   }
 
   .project-2 {
-    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/project-2.svg");
+    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-2.png");
   }
 
   .project-3 {
-    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/project-3.svg");
+    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-3.png");
   }
 
   #project-4 {
-    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/project-4.svg");
+    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-4.png");
+  }
+
+  #project-1-button {
+    display: none;
+  }
+
+  #project-1-button-hidden {
+    display: inline;
+    padding: 0.75rem;
+    background-color: #ff6b00;
+    color: #fff;
+    font-weight: 700;
+    border: 1px solid #ff6b00;
+    font-size: 1rem;
+    font-family: "Inter", sans-serif;
+    letter-spacing: 0.05em;
+    width: 100%;
   }
 
   /* About me */
@@ -717,7 +760,7 @@ img {
   }
 
   #about-me-div {
-    background-image: url(../images/desktop-about-me.png);
+    background-image: url("../images/about-me/desktop-about-me.png");
     background-position: right;
     padding: 1rem 0 0 8.875rem;
   }
@@ -771,7 +814,6 @@ img {
 
   .hidden-img,
   .flex-button,
-  #social-media-footer hr,
   .hidden-obj {
     display: none;
   }
