Fix stylelint errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -810,7 +810,8 @@ a:visited {
 
   .hidden-img,
   .flex-button,
-  .hidden-obj {
+  .hidden-obj,
+  #social-media-footer-img {
     display: none;
   }
 
