--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ a:visited {
 #project-4:hover,
 #about-me-lang div ul li:hover,
 #about-me-lang div div img:hover {
-  transform: scale(1.15)
+  transform: scale(1.15);
 }
 
 #project-1-button {
@@ -719,7 +719,7 @@ a:visited {
 
   #projects-section-3 div {
     margin-top: 0;
-}
+  }
 
   #project-1,
   .project-2,
@@ -757,7 +757,7 @@ a:visited {
   #project-4:hover,
   #about-me-lang div ul li:hover,
   #about-me-lang div div img:hover {
-    transform: scale(1.15)
+    transform: scale(1.15);
   }
 
   #project-1-button {
@@ -784,7 +784,7 @@ a:visited {
   }
 
   .project-heading {
-padding-top: 0;
+    padding-top: 0;
   }
 
   /* About me */
