Add focus to the classes to make them more interactive.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Crete+Round&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 @font-face {
-  font-family: 'InaiMathi';
+  font-family: "InaiMathi";
   src: url("../fonts/InaiMathi.ttf");
 }
 
@@ -67,7 +67,7 @@ body {
   justify-content: space-between;
   background: #3c3a39;
   padding: 0 2rem;
-  font-family: 'Roboto', Courier, monospace;
+  font-family: "Roboto", Courier, monospace;
   font-weight: 700;
   font-size: 1.125rem;
 }
@@ -76,7 +76,7 @@ a,
 a:link,
 a:active,
 a:hover,
-a:visited {
+a:visited a:focus {
   text-decoration: none;
 }
 
@@ -129,12 +129,14 @@ a:visited {
   font-family: "Inter", sans-serif;
 }
 
-#menu:hover li {
+#menu:hover li,
+#menu:focus li {
   opacity: 0.2;
   filter: blur(2px);
 }
 
-#menu li:hover {
+#menu li:hover,
+#menu li:focus {
   opacity: 1;
   filter: blur(0);
 }
@@ -144,7 +146,9 @@ a:visited {
 }
 
 #headline-social-media li:hover,
-#contact-social-form li:hover {
+#contact-social-form li:hover,
+#headline-social-media li:focus,
+#contact-social-form li:focus {
   transform: scale(1.5);
 }
 
@@ -178,7 +182,13 @@ a:visited {
 .project-3:hover,
 #project-4:hover,
 #about-me-lang div ul li:hover,
-#about-me-lang div div img:hover {
+#about-me-lang div div img:hover,
+#project-1:focus,
+.project-2:focus,
+.project-3:focus,
+#project-4:focus,
+#about-me-lang div ul li:focus,
+#about-me-lang div div img:focus {
   transform: scale(1.15);
 }
 
@@ -194,7 +204,8 @@ a:visited {
   animation: spacing 2s ease-in forwards infinite;
 }
 
-#nav-first-a:hover {
+#nav-first-a:hover,
+#nav-first-a:focus {
   animation-play-state: paused;
 }
 
@@ -237,7 +248,7 @@ a:visited {
   order: 1;
   flex-grow: 0;
   color: #f83;
-  font-family: 'Crete Round', Courier, monospace;
+  font-family: "Crete Round", Courier, monospace;
   font-weight: 400;
   font-size: 3.5rem;
   text-align: left;
@@ -248,7 +259,7 @@ a:visited {
   order: 2;
   flex-grow: 0;
   color: #fff5e1;
-  font-family: 'Roboto', Courier, monospace;
+  font-family: "Roboto", Courier, monospace;
   font-size: 1.5rem;
   padding: 1rem 0;
 }
@@ -277,7 +288,9 @@ a:visited {
 }
 
 #headline h1:hover,
-#about-me-div h2:hover {
+#about-me-div h2:hover,
+#headline h1:focus,
+#about-me-div h2:focus {
   animation: blink 1s linear infinite;
 }
 
@@ -286,7 +299,7 @@ a:visited {
   order: 3;
   flex-grow: 0;
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
 }
 
@@ -316,7 +329,7 @@ a:visited {
 #projects-title {
   font-size: 2.5rem;
   font-weight: 400;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   text-align: center;
 }
 
@@ -378,7 +391,9 @@ a:visited {
 }
 
 #project-1-button:hover,
-.project-button:hover {
+.project-button:hover,
+#project-1-button:focus,
+.project-button:focus {
   background-color: #1c1c1c;
   color: #f83;
   border-color: #1c1c1c;
@@ -386,7 +401,7 @@ a:visited {
 
 .project-heading {
   font-size: 2rem;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   color: #fff;
   font-weight: 400;
   padding-top: 5rem;
@@ -434,7 +449,9 @@ a:visited {
 }
 
 .button:hover,
-.flex-button:hover {
+.flex-button:hover,
+.button:focus,
+.flex-button:focus {
   background-color: #1c1c1c;
   color: #f83;
 }
@@ -472,7 +489,8 @@ a:visited {
   gap: 0.5rem;
 }
 
-#about-me-lang div div h2:hover {
+#about-me-lang div div h2:hover,
+#about-me-lang div div h2:focus {
   animation: change-color 1s linear infinite;
 }
 
@@ -486,7 +504,7 @@ a:visited {
 /* Form */
 #form {
   font-weight: 900;
-  font-family: 'Crimson Pro', sans-serif;
+  font-family: "Crimson Pro", sans-serif;
   border: 0;
   margin: 1rem;
 }
@@ -520,7 +538,10 @@ a:visited {
 
 #name:hover,
 #email:hover,
-#message:hover {
+#message:hover,
+#name:focus,
+#email:focus,
+#message:focus {
   border: 1px solid #1c1c1c;
   border-radius: 8px;
 }
@@ -741,15 +762,30 @@ a:visited {
   }
 
   .project-2 {
-    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-2.png");
+    background-image: linear-gradient(
+        179.35deg,
+        rgba(38, 38, 38, 0) 0.85%,
+        rgba(38, 38, 38, 0.9) 84%
+      ),
+      url("../images/projects/project-2.png");
   }
 
   .project-3 {
-    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-3.png");
+    background-image: linear-gradient(
+        179.35deg,
+        rgba(38, 38, 38, 0) 0.85%,
+        rgba(38, 38, 38, 0.9) 84%
+      ),
+      url("../images/projects/project-3.png");
   }
 
   #project-4 {
-    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-4.png");
+    background-image: linear-gradient(
+        179.35deg,
+        rgba(38, 38, 38, 0) 0.85%,
+        rgba(38, 38, 38, 0.9) 84%
+      ),
+      url("../images/projects/project-4.png");
   }
 
   #project-1:hover,
@@ -757,7 +793,13 @@ a:visited {
   .project-3:hover,
   #project-4:hover,
   #about-me-lang div ul li:hover,
-  #about-me-lang div div img:hover {
+  #about-me-lang div div img:hover,
+  #project-1:focus,
+  .project-2:focus,
+  .project-3:focus,
+  #project-4:focus,
+  #about-me-lang div ul li:focus,
+  #about-me-lang div div img:focus {
     transform: scale(1.15);
   }
 
@@ -778,7 +820,8 @@ a:visited {
     width: 100%;
   }
 
-  #project-1-button-hidden:hover {
+  #project-1-button-hidden:hover,
+  #project-1-button-hidden:focus {
     color: #f83;
     background-color: #1c1c1c;
     border: 1px solid #1c1c1c;
