--- a/css/styles.css
+++ b/css/styles.css
@@ -754,30 +754,15 @@ a:focus {
   }
 
   .project-2 {
-    background-image: linear-gradient(
-        179.35deg,
-        rgba(38, 38, 38, 0) 0.85%,
-        rgba(38, 38, 38, 0.9) 84%
-      ),
-      url("../images/projects/project-2.png");
+    background-image: linear-gradient(179.35deg,rgba(38, 38, 38, 0) 0.85%,rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-2.png");
   }
 
   .project-3 {
-    background-image: linear-gradient(
-        179.35deg,
-        rgba(38, 38, 38, 0) 0.85%,
-        rgba(38, 38, 38, 0.9) 84%
-      ),
-      url("../images/projects/project-3.png");
+    background-image: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-3.png");
   }
 
   #project-4 {
-    background-image: linear-gradient(
-        179.35deg,
-        rgba(38, 38, 38, 0) 0.85%,
-        rgba(38, 38, 38, 0.9) 84%
-      ),
-      url("../images/projects/project-4.png");
+    background-image: linear-gradient(179.35deg,rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url("../images/projects/project-4.png");
   }
 
   #project-1:hover,
