--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,14 @@
   src: url("../fonts/InaiMathi.ttf");
 }
 
+:root {
+  --mainColor: #f83;
+  --blue: #172b4d;
+  --navColor: #3c3a39;
+  --mainBgColor: #1c1c1c;
+}
+
+
 @keyframes blink {
   0% {
     opacity: 0;
@@ -36,40 +44,28 @@
   }
 }
 
-@keyframes change-color {
-  0% {
-    color: #ff6b00;
-  }
-
-  50% {
-    color: #ff6a0096;
-  }
-
-  100% {
-    color: #ff6a0000;
-  }
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-body {
+html, body {
   align-items: center;
   width: 100%;
+  overflow-x: hidden;
 }
 
 /* Header */
 #nav {
   display: flex;
-  justify-content: space-between;
-  background: #3c3a39;
-  padding: 0 2rem;
+  background-color: var(--navColor);
   font-family: "Roboto", Courier, monospace;
   font-weight: 700;
   font-size: 1.125rem;
+  gap: 50%;
+  padding: 1rem 0;
+  justify-content: space-around;
 }
 
 a,
@@ -88,20 +84,21 @@ a:focus {
 
 #nav a,
 #menu {
-  align-self: center;
   text-decoration: none;
   color: #fff;
-  margin: 1rem 0;
-  list-style-type: none;
 }
 
-#nav nav a {
-  padding-right: 0.5rem;
+#nav-first-a {
+  text-transform: uppercase;
+  font-family: "Algerian";
+  font-style: italic;
 }
 
-.works-list li {
-  background-color: rgba(255, 255, 255, 0.24);
-  border: #e5e5e500;
+
+#nav-first-a:hover,
+#nav-first-a:focus {
+  transform: rotate(360deg);
+  transition-duration: 2s;
 }
 
 .project-social-media li {
@@ -150,7 +147,7 @@ a:focus {
 #contact-social-form li:hover,
 #headline-social-media li:focus,
 #contact-social-form li:focus {
-  transform: scale(1.5);
+  transform: scale(1.1);
 }
 
 #flex-projects div img {
@@ -190,7 +187,7 @@ a:focus {
 #project-4:focus,
 #about-me-lang div ul li:focus,
 #about-me-lang div div img:focus {
-  transform: scale(1.15);
+  transform: scale(0.95);
 }
 
 #project-1-button {
@@ -226,20 +223,19 @@ a:focus {
   background-image: url("../images/header/header.png");
   background-repeat: no-repeat;
   background-position: right bottom;
-  background-color: #1c1a19;
+  background-color: var(--mainBgColor);
 }
 
 #headline div {
   padding-top: 7.5rem;
 }
 
-.works-item h1,
 #headline h1,
 #about-me-div h2 {
   flex: none;
   order: 1;
   flex-grow: 0;
-  color: #f83;
+  color: var(--mainColor);
   font-family: "Crete Round", Courier, monospace;
   font-weight: 400;
   font-size: 3.5rem;
@@ -250,7 +246,7 @@ a:focus {
   flex: none;
   order: 2;
   flex-grow: 0;
-  color: #fff5e1;
+  color: #fff;
   font-family: "Roboto", Courier, monospace;
   font-size: 1.5rem;
   padding: 1rem 0;
@@ -267,7 +263,7 @@ a:focus {
   font-size: 2rem;
   text-align: center;
   padding: 0 2rem 2rem;
-  color: #172b4d;
+  color: var(--blue);
   font-family: "Inter", sans-serif;
   font-weight: 700;
 }
@@ -293,6 +289,11 @@ a:focus {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
+}
+
+#headline-last-div p,
+#about-me-empty-div p {
+  display: none;
 }
 
 .social-media,
@@ -332,7 +333,7 @@ a:focus {
 
 #works-hr {
   width: 100%;
-  border: 1px solid #212121;
+  border: 1px solid;
   margin-top: 2rem;
 }
 
@@ -344,29 +345,19 @@ a:focus {
   padding: 1rem 0;
 }
 
-.lang-box span {
-  border: 0.2px solid;
-  margin-right: 0.5rem;
-  padding: 0.5rem;
-}
-
-#lang-box {
-  color: #fff;
-}
-
 #about-me button {
   padding: 1rem;
-  margin: 2rem 0 12rem 0;
+  margin: 2rem 0 0;
 }
 
 .flex-button,
 .project-button,
 #project-1-button {
   padding: 0.75rem;
-  background-color: #f83;
-  color: #1c1c1c;
+  background-color: var(--mainColor);
+  color: var(--mainBgColor);
   font-weight: 700;
-  border: 1px solid #f83;
+  border: 1px solid var(--mainColor);
   font-size: 1rem;
   font-family: "Inter", sans-serif;
   letter-spacing: 0.05em;
@@ -386,9 +377,9 @@ a:focus {
 .project-button:hover,
 #project-1-button:focus,
 .project-button:focus {
-  background-color: #1c1c1c;
-  color: #f83;
-  border-color: #1c1c1c;
+  background-color: var(--mainBgColor);
+  color: var(--mainColor);
+  border-color: var(--mainBgColor);
 }
 
 .project-heading {
@@ -429,8 +420,8 @@ a:focus {
 
 /* About myself */
 .button {
-  background-color: #f55a00;
-  border: 0.2rem solid #f55a00;
+  background-color: var(--mainColor);
+  border: 0.2rem solid var(--mainColor);
   color: white;
   padding: 15px 32px;
   text-align: center;
@@ -444,16 +435,42 @@ a:focus {
 .flex-button:hover,
 .button:focus,
 .flex-button:focus {
-  background-color: #1c1c1c;
-  color: #f83;
+  background-color: var(--mainBgColor);
+  color: var(--mainColor);
+  border-color: var(--mainBgColor);
+}
+
+#about-me {
+  background-color: var(--mainBgColor);
 }
 
 #about-me-div {
-  background-color: #1c1a19;
+  background-color: var(--mainBgColor);
+  padding: 2rem 2rem 0;
+}
+
+#about-me-main-content {
+  display: flex;
+  flex-direction: column;
+}
+
+#about-me-empty-div {
+  background-color: var(--mainBgColor);
   background-image: url("../images/about-me/about me.png");
   background-repeat: no-repeat;
-  background-position: 100% 90%;
-  padding: 1.5rem;
+  background-position: right;
+  background-size: contain;
+  height: 35vh;
+}
+
+#about-me-line-div {
+  width: 90%;
+  margin: auto;
+}
+
+#about-me-line {
+  width: 100%;
+  margin: 2rem auto 0;
 }
 
 #last-list {
@@ -463,9 +480,9 @@ a:focus {
 /* Languages */
 #about-me-lang {
   color: #fff;
-  background-color: #1c1a19;
+  background-color: var(--mainBgColor);
   margin-bottom: 10rem;
-  padding-bottom: 10rem;
+  padding: 10rem 0;
 }
 
 #about-me-lang div {
@@ -534,7 +551,7 @@ a:focus {
 #name:focus,
 #email:focus,
 #message:focus {
-  border: 1px solid #1c1c1c;
+  border: 1px solid var(--mainBgColor);
   border-radius: 8px;
 }
 
@@ -566,14 +583,19 @@ a:focus {
 
 @media (min-width: 768px) {
   /* Head */
+  #nav {
+    padding: 1rem 0;
+  }
+
+  #menu {
+    display: flex;
+    gap: 1rem;
+  }
+
   .hidden-nav {
     display: inline;
     height: 1rem;
     width: 1rem;
-  }
-
-  #nav {
-    padding: 0 10rem;
   }
 
   /* Headline */
@@ -586,24 +608,43 @@ a:focus {
   }
 
   #about-me h2 {
-    color: #ff6b00;
+    color: var(--mainColor);
     font-size: 4.5rem;
     font-weight: 400;
     font-family: "Crete Round", sans-serif;
   }
 
   #headline {
-    flex-direction: inherit;
+    flex-direction: row;
     align-items: center;
-    background-image: url("../images/header/desktop-header.png");
-    background-repeat: no-repeat;
-    background-position: right;
+    background-image: none;
+    padding: 0;
   }
 
   #headline div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     order: 2;
-    width: 35.375rem;
+    width: 45%;
     padding-top: 0;
+    height: 100%;
+  }
+
+  #headline-social-media {
+    order: 1;
+    width: 10%;
+    display: block;
+    padding: 0;
+    /* margin: 1rem; */
+  }
+
+  #headline-last-div {
+    background-image: url(../images/header/desktop-header.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 100vh;
+    background-size: contain;
   }
 
   #headline h1 {
@@ -618,15 +659,8 @@ a:focus {
     font-size: 1.25rem;
   }
 
-  #headline-social-media {
-    order: 1;
-    width: 5%;
-    display: block;
-    padding: 0;
-  }
-
   .social-media li {
-    padding: 0.5rem;
+    padding: 0 0 1rem 2rem;
   }
 
   .works-lang li {
@@ -642,28 +676,25 @@ a:focus {
     padding: 0;
   }
 
-  .social-media li a {
-    height: 2vh;
-  }
-
   .works-lang {
     gap: 1rem;
+    flex-wrap: wrap;
   }
 
   #headline img {
     order: 3;
-    width: 44%;
-    height: inherit;
+    height: 1.25rem;
+    width: 1.25rem;
   }
 
   /* Projects */
   #works-hr {
-    width: 65%;
+    width: 50%;
     margin: auto;
   }
 
   #projects-title {
-    padding: 10rem 2rem 10rem;
+    padding: 5rem 0 5rem;
     font-size: 2.5rem;
   }
 
@@ -681,6 +712,7 @@ a:focus {
 
   #projects-section-2 {
     padding-left: 2rem;
+    width: 40%;
   }
 
   #projects-section-1 div {
@@ -699,13 +731,11 @@ a:focus {
   }
 
   #about-me-div h2 {
-    margin-top: 7.5rem;
-    width: 35.375rem;
+    margin-top: 5rem;
   }
 
   #about-me-div p {
     font-size: 1.25rem;
-    width: 35.375rem;
   }
 
   #flex-projects div p {
@@ -720,6 +750,7 @@ a:focus {
 
   .center-img {
     margin: 0;
+    width: 60%;
   }
 
   #about-me button {
@@ -733,6 +764,7 @@ a:focus {
 
   #projects-section-3 div {
     margin-top: 0;
+    width: auto;
   }
 
   #project-1,
@@ -743,6 +775,7 @@ a:focus {
     height: 24.125rem;
     padding: 8rem 1rem 0;
     margin: 2rem auto;
+    background-size: cover;
   }
 
   #project-1 {
@@ -777,7 +810,7 @@ a:focus {
   #project-4:focus,
   #about-me-lang div ul li:focus,
   #about-me-lang div div img:focus {
-    transform: scale(1.15);
+    transform: scale(0.95);
   }
 
   #project-1-button {
@@ -787,10 +820,10 @@ a:focus {
   #project-1-button-hidden {
     display: inline;
     padding: 0.75rem;
-    background-color: #ff6b00;
+    background-color: var(--mainColor);
     color: #fff;
     font-weight: 700;
-    border: 1px solid #ff6b00;
+    border: 1px solid var(--mainColor);
     font-size: 1rem;
     font-family: "Inter", sans-serif;
     letter-spacing: 0.05em;
@@ -799,9 +832,9 @@ a:focus {
 
   #project-1-button-hidden:hover,
   #project-1-button-hidden:focus {
-    color: #f83;
-    background-color: #1c1c1c;
-    border: 1px solid #1c1c1c;
+    color: var(--mainColor);
+    background-color: var(--mainBgColor);
+    border: 1px solid var(--mainBgColor);
   }
 
   .project-heading {
@@ -809,15 +842,26 @@ a:focus {
   }
 
   /* About me */
+  #about-me-main-content {
+    flex-direction: row;
+  }
+
   #about-me ul {
     flex-direction: column;
     align-items: normal;
   }
 
   #about-me-div {
+    width: 50%;
+    padding: 0 0 0 8.8125rem
+  }
+
+  #about-me-empty-div {
     background-image: url("../images/about-me/desktop-about-me.png");
     background-position: right;
-    padding: 1rem 0 0 8.875rem;
+    background-size: contain;
+    width: 50%;
+    height: auto;
   }
 
   #about-me-div hr {
@@ -827,8 +871,8 @@ a:focus {
   /* Languages */
   #about-me-lang {
     display: flex;
-    gap: 15rem;
     padding: 0 8.875rem 10rem;
+    justify-content: space-between;
   }
 
   #about-me-lang div {
@@ -843,23 +887,25 @@ a:focus {
   #form {
     display: flex;
     gap: 2rem;
+    margin: auto;
   }
 
   #form h2 {
     text-align: left;
-    padding-left: 8.4375rem;
     font-size: 2.5rem;
     width: 28.4375rem;
+    margin: 0 0 0 8.4375rem;
+    padding: 0;
   }
 
   #contact-form {
-    display: unset;
-    width: 59%;
+    padding: 0;
+    width: 65%;
+    margin: 0 8.4375rem 0 0;
   }
 
   #form-button {
-    height: auto;
-    width: auto;
+    margin-left: 0;
   }
 
   #email,
@@ -876,7 +922,9 @@ a:focus {
 
   #projects-section-3 {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: repeat(3, minmax(0, 1fr));;
+    grid-gap: 1rem;
+    overflow-wrap: break-word;
   }
 
   #message {
